# Demos

./: README.md
C++/: README.md
C++/01my_imgui_glfw_OpenGL/: CMakeLists.txt  README.md  imgui.ini
C++/01my_imgui_glfw_OpenGL/src/: main.cpp
C++/02GAMES101_Homework/02-Triangles and Z-buffering/: README.txt
C++/02GAMES101_Homework/03-Pipeline and Shading/: README.txt
C++/02GAMES101_Homework/04-贝塞尔曲线/: README.txt
C++/02GAMES101_Homework/05-光线与三角形相交/: README.txt
C++/02GAMES101_Homework/06-加速结构/: README.txt
C++/02GAMES101_Homework/07-路径追踪/: REAME.txt
C++/02GAMES101_Homework/08-质点弹簧系统/: README.txt
C++/03OpenGL_Game/: CmakeLists.txt  README.md
C++/03OpenGL_Game/dlls/: README.md
C++/03OpenGL_Game/include/: ball_object.h  game.h  particle_generator.h  post_processor.h  power_up.h  text_renderer.h
C++/03OpenGL_Game/lib/: freetyped.lib
C++/03OpenGL_Game/src/: OpenGL2DGame.cpp  ball_object.cpp  game.cpp  game_level.cpp  particle_generator.cpp  post_processor.cpp  resource_manager.cpp  text_renderer.cpp
Python/: README.md
Python/001_EasyOCR/: README.md  my_ocr.py
Python/001_EasyOCR/myeasycor/: cli.py  craft_utils.py  detection.py  easyocr.py  imgproc.py  utils.py
Python/002_keypoint_unet+heatmap/: README.md
Python/003_audio_demo/: README.md
Python/003_audio_demo/original/: README.md  classify_train.py  pyaudio_demo.py  regression_train.py  slice.py
Python/003_audio_demo/wrenchAudio/: README.md  client_wrenchAudio.py  wavfile.py
Python/004_推荐_协同过滤_nlp相关/: README.md
Python/005_NewWordDiscovery/: README.md
(+36 files in other folders)
